Phaser was updated for phaser-ce 2.11.1
It was decided to use phaser-ce instead phaser3.

It was included http-server too for development process.

--- a/figicat/index.html
+++ b/figicat/index.html
@@ -5,7 +5,7 @@
 	<title>Buscador de Diamantes</title>
 	<link href="css/jquery-ui.css" rel="stylesheet">
         <link href="css/profile.css" rel="stylesheet">
-        <script type="text/javascript" src="js/phaser.2.3.0.min.js"></script>
+        <script type="text/javascript" src="../node_modules/phaser-ce/build/phaser.min.js"></script>
 </head>
 <body>
     <div id="layout">
